--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
             <h1>Which member of the Rose family are you?</h1>
         </div>
         <div class="question">
-            <h3>Pick a Karda$hian/Jenner</h3>
+            <h3>Pick a Karda$hian/Jenner:</h3>
             <div class="choices">
                 <label>
                     <input type="radio" name="kardashian" value="moira"/>
                     <div class="choice">
                         <img src="img/kim.jpg" class="img-with-border"/>
-                        <p class="img-caption">Kim</p>
+                        <p class="caption">Kim</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="kardashian" value="alexis"/>
                     <div class="choice">
                         <img src="img/kylie.jpg" class="img-with-border"/>
-                        <p class="img-caption">Kylie</p>
+                        <p class="caption">Kylie</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="kardashian" value="jonny"/>
                     <div class="choice">
                         <img src="img/kris.jpeg" class="img-with-border"/>
-                        <p class="img-caption">Kris</p>
+                        <p class="caption">Kris</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="kardashian" value="david"/>
                     <div class="choice">
                         <img src="img/khloe.jpeg" class="img-with-border"/>
-                        <p class="img-caption">Khloe</p>
+                        <p class="caption">Khloe</p>
                     </div>
                 </label>
             </div>
@@ -48,28 +48,28 @@
                     <input type="radio" name="breakfast" value="alexis"/>
                     <div class="choice">
                         <img src="img/greenjuice.jpg" class="img-with-border"/>
-                        <p class="img-caption">green juice</p>
+                        <p class="caption">green juice</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="breakfast" value="david"/>
                     <div class="choice">
                         <img src="img/eggwhite.jpeg" class="img-with-border"/>
-                        <p class="img-caption">egg white omlette</p>
+                        <p class="caption">egg white omlette</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="breakfast" value="moira"/>
                     <div class="choice">
                         <img src="img/bloodymary.jpg" class="img-with-border"/>
-                        <p class="img-caption">a bloody mary</p>
+                        <p class="caption">a bloody mary</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="breakfast" value="jonny"/>
                     <div class="choice">
                         <img src="img/waffle.jpg" class="img-with-border"/>
-                        <p class="img-caption">waffles</p>
+                        <p class="caption">waffles</p>
                     </div>
                 </label>
             </div>
@@ -81,28 +81,28 @@
                     <input type="radio" name="gif" value="jonny"/>
                     <div class="choice">
                         <img src="img/alexis-j.png" class="img-with-border"/>
-                        <p class="img-caption">attempting to wink</p>
+                        <p class="caption">attempting to wink</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="moira"/>
                     <div class="choice">
                         <img src="img/alexis-m.png" class="img-with-border"/>
-                        <p class="img-caption">stop doing that</p>
+                        <p class="caption">nope</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="alexis"/>
                     <div class="choice">
                         <img src="img/alexis-a.png" class="img-with-border"/>
-                        <p class="img-caption">OMG</p>
+                        <p class="caption">OMG</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="david"/>
                     <div class="choice">
                         <img src="img/alexis-d.png" class="img-with-border"/>
-                        <p class="img-caption">ew david</p>
+                        <p class="caption">ew david</p>
                     </div>
                 </label>
             </div>
@@ -114,28 +114,57 @@
                     <input type="radio" name="celeb" value="moira"/>
                     <div class="choice">
                         <img src="img/babs.jpg" class="img-with-border"/>
-                        <p class="img-caption">barbara streisand</p>
+                        <p class="caption">Barbara Streisand</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="celeb" value="david"/>
                     <div class="choice">
                         <img src="img/mariah.jpg" class="img-with-border"/>
-                        <p class="img-caption">mariah carey</p>
+                        <p class="caption">Mariah Carey</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="celeb" value="jonny"/>
                     <div class="choice">
                         <img src="img/bruce.jpg" class="img-with-border"/>
-                        <p class="img-caption">bruce springsteen</p>
+                        <p class="caption">Bruce Springsteen</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="celeb" value="alexis"/>
                     <div class="choice">
                         <img src="img/parishilton.jpg" class="img-with-border"/>
-                        <p class="img-caption">paris hilton</p>
+                        <p class="caption">Paris Hilton</p>
+                    </div>
+                </label>
+            </div>
+        </div>
+        <div class="question">
+            <h3>Pick a Moira Ro$e quote:</h3>
+            <div class="choices">
+                <label>
+                    <input type="radio" name="quote" value="david"/>
+                    <div class="choice">
+                        <p class="caption">&#34I&#39m eating egg whites and hoping the building will collapse.&#34</p>
+                    </div>
+                </label>
+                <label>
+                    <input type="radio" name="quote" value="jonny"/>
+                    <div class="choice">
+                        <p class="caption">&#34Stop acting like a disgruntled pelican.&#34</p>
+                    </div>
+                </label>
+                <label>
+                    <input type="radio" name="quote" value="alexis"/>
+                    <div class="choice">
+                        <p class="caption">&#34While I can&#39t pretend to fully understand them, at least I can pretend to care!&#34</p>
+                    </div>
+                </label>
+                <label>
+                    <input type="radio" name="quote" value="moira"/>
+                    <div class="choice">
+                        <p class="caption">&#34Oh i'd kill for a good coma right now&#34</p>
                     </div>
                 </label>
             </div>
@@ -147,28 +176,28 @@
                     <input type="radio" name="vacation" value="jonny"/>
                     <div class="choice">
                         <img src="img/roses.jpg" class="img-with-border"/>
-                        <p class="img-caption">with the family</p>
+                        <p class="caption">with the family</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="vacation" value="alexis"/>
                     <div class="choice">
                         <img src="img/mykonos.jpg" class="img-with-border"/>
-                        <p class="img-caption">mykonos (with lindz lohan)</p>
+                        <p class="caption">Mykonos</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="vacation" value="david"/>
                     <div class="choice">
                         <img src="img/paris.jpeg" class="img-with-border"/>
-                        <p class="img-caption">paris fashion week</p>
+                        <p class="caption">Paris fashion week</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="vacation" value="moira"/>
                     <div class="choice">
                         <img src="img/dubai.jpg" class="img-with-border"/>
-                        <p class="img-caption">dubai</p>
+                        <p class="caption">Dubai</p>
                     </div>
                 </label>
             </div>
