--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
             <h1>Which member of the Rose family are you?</h1>
         </div>
         <div class="question">
-            <h3>Pick a Karda$hian/Jenner:</h3>
+            <div class="q-header">
+                <h3>Pick a Karda$hian/Jenner:</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="kardashian" value="moira"/>
@@ -42,7 +45,10 @@
             </div>
         </div>
         <div class="question">
-            <h3>What would you eat for breakfa$t?</h3>
+            <div class="q-header">
+                <h3>What would you eat for breakfa$t?</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="breakfast" value="alexis"/>
@@ -75,40 +81,42 @@
             </div>
         </div>
         <div class="question">
-            <h3>Which Alexi$ do you identify with most?</h3>
+            <div class="q-header">
+                <h3>Which Alexi$ do you identify with most?</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="gif" value="jonny"/>
-                    <div class="choice">
+                    <div class="choice no-caption">
                         <img src="img/alexis-j.png" class="img-with-border"/>
-                        <p class="caption">attempting to wink</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="moira"/>
-                    <div class="choice">
+                    <div class="choice no-caption">
                         <img src="img/alexis-m.png" class="img-with-border"/>
-                        <p class="caption">nope</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="alexis"/>
-                    <div class="choice">
+                    <div class="choice no-caption">
                         <img src="img/alexis-a.png" class="img-with-border"/>
-                        <p class="caption">OMG</p>
                     </div>
                 </label>
                 <label>
                     <input type="radio" name="gif" value="david"/>
-                    <div class="choice">
+                    <div class="choice no-caption">
                         <img src="img/alexis-d.png" class="img-with-border"/>
-                        <p class="caption">ew david</p>
                     </div>
                 </label>
             </div>
         </div>
         <div class="question">
-            <h3>Celebrity icon?</h3>
+            <div class="q-header">
+                <h3>Celebrity icon?</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="celeb" value="moira"/>
@@ -141,7 +149,10 @@
             </div>
         </div>
         <div class="question">
-            <h3>Pick a Moira Ro$e quote:</h3>
+            <div class="q-header">
+                <h3>Pick a Moira Ro$e quote:</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="quote" value="david"/>
@@ -170,7 +181,10 @@
             </div>
         </div>
         <div class="question">
-            <h3>Ideal vacation?</h3>
+            <div class="q-header">
+                <h3>Ideal vacation?</h3>
+                <img src="img/header-img.png">
+            </div>
             <div class="choices">
                 <label>
                     <input type="radio" name="vacation" value="jonny"/>
