--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Libre+Baskerville" rel="stylesheet">
+        <link rel="icon" href="img/header-img.png" />
     </head>
     <body>
+        <title>quiz</title>
         <div id="quiz-title"></div>
         <div class="questions"></div>
         <div id="submit-container">
